--- a/charts/rook-ceph-cluster/templates/host-based-cluster.yaml
+++ b/charts/rook-ceph-cluster/templates/host-based-cluster.yaml
@@ -9,7 +9,7 @@ spec:
     image: ceph/ceph:v14.2.4-20190917
   dataDirHostPath: /var/lib/rook
   mon:
-    count: 1
+    count: {{ .Values.mon.count }}
   dashboard:
     enabled: true
   storage:
