--- a/charts/rook-ceph-cluster/templates/host-based-cluster.yaml
+++ b/charts/rook-ceph-cluster/templates/host-based-cluster.yaml
@@ -2,19 +2,52 @@ apiVersion: ceph.rook.io/v1
 kind: CephCluster
 metadata:
   name: rook-ceph
-  namespace: {{ .Release.Namespace }}
+  namespace: rook-ceph
 spec:
-  cephVersion:
-    image: ceph/ceph:v14.2.4-20190917
-    allowUnsupported: false
   dataDirHostPath: /var/lib/rook
   mon:
-    count: {{ .Values.mon.count }}
-  dashboard:
-    enabled: true
+    count: 3
+    volumeClaimTemplate:
+      spec:
+        storageClassName: local-storage
+        resources:
+          requests:
+            storage: 5Gi
   storage:
-    useAllNodes: true
-    useAllDevices: false
-    # Important: Directories should only be used in pre-production environments
-    directories:
-    - path: /var/lib/rook
+   storageClassDeviceSets:
+    - name: set1
+      count: 1
+      portable: false
+      volumeClaimTemplates:
+      - metadata:
+          name: data
+        spec:
+          resources:
+            requests:
+              storage: 5Gi
+          # IMPORTANT: Change the storage class depending on your environment (e.g. local-storage, gp2)
+          storageClassName: local-storage
+          volumeMode: Block
+          accessModes:
+            - ReadWriteOnce
+
+
+
+#apiVersion: ceph.rook.io/v1
+#kind: CephCluster
+#metadata:
+#  name: rook-ceph
+#  namespace: {{ .Release.Namespace }}
+#spec:
+#  cephVersion:
+#    image: ceph/ceph:v14.2.4-20190917
+#  dataDirHostPath: /var/lib/rook
+#  mon:
+#    count: {{ .Values.mon.count }}
+#    allowMultiplePerNode: true
+#  storage:
+#    useAllNodes: true
+#    useAllDevices: true
+#    # Important: Directories should only be used in pre-production environments
+#    directories:
+#    - path: /var/lib/rook
