--- a/charts/rook-ceph-cluster/templates/host-based-cluster.yaml
+++ b/charts/rook-ceph-cluster/templates/host-based-cluster.yaml
@@ -2,52 +2,14 @@ apiVersion: ceph.rook.io/v1
 kind: CephCluster
 metadata:
   name: rook-ceph
-  namespace: rook-ceph
+  namespace: {{ .Release.Namespace }}
 spec:
+  cephVersion:
+    image: ceph/ceph:v14.2.4-20190917
   dataDirHostPath: /var/lib/rook
   mon:
-    count: 3
-    volumeClaimTemplate:
-      spec:
-        storageClassName: local-storage
-        resources:
-          requests:
-            storage: 5Gi
+    count: {{ .Values.mon.count }}
+    allowMultiplePerNode: true
   storage:
-   storageClassDeviceSets:
-    - name: set1
-      count: 1
-      portable: false
-      volumeClaimTemplates:
-      - metadata:
-          name: data
-        spec:
-          resources:
-            requests:
-              storage: 5Gi
-          # IMPORTANT: Change the storage class depending on your environment (e.g. local-storage, gp2)
-          storageClassName: local-storage
-          volumeMode: Block
-          accessModes:
-            - ReadWriteOnce
-
-
-
-#apiVersion: ceph.rook.io/v1
-#kind: CephCluster
-#metadata:
-#  name: rook-ceph
-#  namespace: {{ .Release.Namespace }}
-#spec:
-#  cephVersion:
-#    image: ceph/ceph:v14.2.4-20190917
-#  dataDirHostPath: /var/lib/rook
-#  mon:
-#    count: {{ .Values.mon.count }}
-#    allowMultiplePerNode: true
-#  storage:
-#    useAllNodes: true
-#    useAllDevices: true
-#    # Important: Directories should only be used in pre-production environments
-#    directories:
-#    - path: /var/lib/rook
+    useAllNodes: true
+    useAllDevices: true
