--- a/charts/multus/values.yaml
+++ b/charts/multus/values.yaml
@@ -50,7 +50,7 @@ conf:
     # https://github.com/intel/multus-cni/blob/master/doc/configuration.md
     name: multus-cni-network
     type: multus
-    kubeconfig: __KUBECONFIG_FILEPATH__
+    kubeconfig: /home/bala/.kube/config
     confDir: /etc/cni/multus/net.d
     cniDir: /var/lib/cni/multus
     binDir: /opt/cni/bin
@@ -65,36 +65,27 @@ conf:
     systemNamespaces: ["kube-system"]
     multusNamespace: kube-system
   net_attach_defs:
-    - name: macvlan-conf-1
+    - name: 10-calico
       namespace: kube-system
       cni_conf:
         cniVersion: 0.3.0
-        type: macvlan
-        master: eth1
-        mode: bridge
-        ipam:
-          type: host-local
-          ranges:
-            subnet: "12.10.0.0/16"
-            rangeStart: "12.10.1.20"
-            rangeEnd: "12.10.3.50"
-#        plugins:
-#        - type: calico
-#          log_level: info
-#          etcd_endpoints: __ETCD_ENDPOINTS__
-#          etcd_key_file: __ETCD_KEY_FILE__
-#          etcd_cert_file: __ETCD_CERT_FILE__
-#          etcd_ca_cert_file: __ETCD_CA_CERT_FILE__
-#          ipam:
-#            type: calico-ipam
-#          policy:
-#            type: k8s
-#          kubernetes:
-#            kubeconfig: __KUBECONFIG_FILEPATH__
-#        - type: portmap
-#          snat: true
-#          capabilities:
-#            portMappings: true
+        plugins:
+        - type: calico
+          log_level: info
+          etcd_endpoints: https://192.168.122.59:2379
+          etcd_key_file: /etc/kubernetes/pki/etcd/server.key
+          etcd_cert_file: /etc/kubernetes/pki/etcd/server.crt
+          etcd_ca_cert_file: /etc/kubernetes/pki/etcd/ca.crt
+          ipam:
+            type: calico-ipam
+          policy:
+            type: k8s
+          kubernetes:
+            kubeconfig: /home/bala/.kube/config
+        - type: portmap
+          snat: true
+          capabilities:
+            portMappings: true
 
 manifests:
   configmap_etc: true
