--- a/charts/metallb/values.yaml
+++ b/charts/metallb/values.yaml
@@ -8,7 +8,7 @@
 # existingConfigMap specifies the name of an externally-defined
 # ConfigMap to use as the configuration. Helm will not manage the
 # contents of this ConfigMap, it is your responsibility to create it.
-existingConfigMap: metallb-config
+#existingConfigMap: metallb-config
 
 # configInline specifies MetalLB's configuration directly, in yaml
 # format. When configInline is used, Helm manages MetalLB's
