--- a/charts/multus/values.yaml
+++ b/charts/multus/values.yaml
@@ -14,7 +14,8 @@
 
 images:
   tags:
-    multus: nfvpe/multus:snapshot
+#    multus: nfvpe/multus:snapshot
+    multus: nfvpe/multus:v3.3
     dep_check: quay.io/stackanetes/kubernetes-entrypoint:v0.3.1
     image_repo_sync: docker.io/docker:17.07.0
   pull_policy: IfNotPresent
@@ -101,4 +102,4 @@ manifests:
   configmap_etc: true
   daemonset_multus: true
   crd_net_attach_def: true
-  net_attach_defs: false
+  net_attach_defs: true
