--- a/charts/metallb/templates/tests/test-connection.yaml
+++ b/charts/metallb/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "ba.fullname" . }}-test-connection"
+  name: "{{ include "metallb.fullname" . }}-test-connection"
   labels:
-{{ include "ba.labels" . | indent 4 }}
+{{ include "metallb.labels" . | indent 4 }}
   annotations:
     "helm.sh/hook": test-success
 spec:
