--- a/charts/metallb/templates/tests/test-connection.yaml
+++ b/charts/metallb/templates/tests/test-connection.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: "{{ include "metallb.fullname" . }}-test-connection"
-  labels:
-{{ include "metallb.labels" . | indent 4 }}
+#  labels:
+#{{ include "metallb.labels" . | indent 4 }}
   annotations:
     "helm.sh/hook": test-success
 spec:
