--- a/charts/metallb/templates/tests/test-connection.yaml
+++ b/charts/metallb/templates/tests/test-connection.yaml
@@ -1,52 +1,52 @@
-apiVersion: v1
-kind: Pod
-metadata:
-  name: "{{ include "metallb.fullname" . }}-test-connection"
-#  labels:
-#{{ include "metallb.labels" . | indent 4 }}
-  annotations:
-    "helm.sh/hook": test-success
-spec:
-  containers:
-    - name: wget
-      image: busybox
-      command: ['wget']
-      args:  ['{{ include "ba.fullname" . }}:{{ .Values.service.port }}']
-  restartPolicy: Never
-
-
 #apiVersion: v1
-#kind: Service
+#kind: Pod
 #metadata:
-#  name: nginx
+#  name: "{{ include "metallb.fullname" . }}-test-connection"
+##  labels:
+##{{ include "metallb.labels" . | indent 4 }}
 #  annotations:
-#    metallb.universe.tf/address-pool: default
+#    "helm.sh/hook": test-success
 #spec:
-#  ports:
-#  - port: 80
-#    targetPort: 80
-#  selector:
-#    app: nginx
-#  type: LoadBalancer
+#  containers:
+#    - name: wget
+#      image: busybox
+#      command: ['wget']
+#      args:  ['{{ include "ba.fullname" . }}:{{ .Values.service.port }}']
+#  restartPolicy: Never
 #
-#---
-#apiVersion: apps/v1
-#kind: Deployment
-#metadata:
-#  name: nginx-deployment
-#  labels:
-#    app: nginx
-#spec:
-#  selector:
-#    matchLabels:
-#      app: nginx
-#  template:
-#    metadata:
-#      labels:
-#        app: nginx
-#    spec:
-#      containers:
-#      - name: nginx
-#        image: nginx:1.7.9
-#        ports:
-#        - containerPort: 80
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx
+  annotations:
+    metallb.universe.tf/address-pool: default
+spec:
+  ports:
+  - port: 80
+    targetPort: 80
+  selector:
+    app: nginx
+  type: LoadBalancer
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx-deployment
+  labels:
+    app: nginx
+spec:
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:1.7.9
+        ports:
+        - containerPort: 80
